// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Common/ScrollToActionContainer ScrollToActionContainer 1`] = `
Array [
  .emotion-0 {
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: full;
  padding-top: 0px;
}

.emotion-3 {
  text-align: center;
  font-size: xl;
  color: brand.800;
  margin-bottom: 4px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  bottom: 0px;
  color: brand.800;
  cursor: pointer;
  margin-bottom: 3px;
}

.emotion-4>*:not(style)~*:not(style) {
  margin-top: 0.5rem;
  -webkit-margin-end: 0px;
  margin-inline-end: 0px;
  margin-bottom: 0px;
  -webkit-margin-start: 0px;
  margin-inline-start: 0px;
}

.emotion-5 {
  text-transform: uppercase;
  font-size: xs;
}

.emotion-6 {
  width: 6px;
  height: 6px;
  display: inline-block;
  line-height: 1em;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: currentColor;
  vertical-align: middle;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-2"
      />
      <p
        className="chakra-text emotion-3"
      >
        This is some example content of the scroll to action container
      </p>
      <div
        className="chakra-stack emotion-4"
        onClick={[Function]}
      >
        <p
          className="chakra-text emotion-5"
        >
          Click here
        </p>
        <svg
          className="chakra-icon emotion-6"
          focusable={false}
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>,
  .emotion-0 {
  background: brand.800;
  height: 100vh;
}

<div
    className="emotion-0"
  />,
]
`;

exports[`Storyshots Common/ScrollToActionContainer ScrollToActionContainer with Navigation 1`] = `
Array [
  .emotion-0 {
  overflow: auto;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  z-index: docked;
  background: white;
}

.emotion-1 {
  display: block;
  display: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 4px;
}

.emotion-4 {
  width: 50px;
  fill: gray.800;
}

.emotion-5 {
  width: unset;
  height: unset;
  display: inline-block;
  line-height: 1em;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: currentColor;
  vertical-align: middle;
}

.emotion-6 {
  width: 6px;
  height: 6px;
  display: inline-block;
  line-height: 1em;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: currentColor;
  vertical-align: middle;
}

.emotion-7 {
  display: none;
  display: block;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin: 6px;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  max-width: 8xl;
  width: full;
}

.emotion-9>*:not(style)~*:not(style) {
  margin-top: 0px;
  -webkit-margin-end: 0px;
  margin-inline-end: 0px;
  margin-bottom: 0px;
  -webkit-margin-start: 12px;
  margin-inline-start: 12px;
}

.emotion-10 {
  margin-right: auto;
}

.emotion-11 {
  width: 100px;
  fill: gray.800;
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  white-space: nowrap;
  vertical-align: middle;
  outline: 2px solid transparent;
  outline-offset: 2px;
}

.emotion-14 {
  width: 4px;
  height: 4px;
  display: inline-block;
  line-height: 1em;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: currentColor;
  vertical-align: middle;
  margin-right: 2px;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  fill: white;
}

[role=group]:hover .emotion-14,
[role=group][data-hover] .emotion-14,
[data-group]:hover .emotion-14,
[data-group][data-hover] .emotion-14,
.group:hover .emotion-14,
.group[data-hover] .emotion-14 {
  fill: white;
}

<div
    className="emotion-0"
    id="navigation"
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-2"
      >
        <a
          aria-label="Home"
          className="chakra-link emotion-3"
          href="/"
          rel="noopener noreferrer"
        >
          <div
            className="emotion-4"
          >
            <svg
              className="chakra-icon emotion-5"
              focusable={false}
              viewBox="0 0 33.787568 17.315006"
            >
              <g>
                <text
                  x=".021"
                  y="10.118"
                >
                  YES
                </text>
                <text
                  x=".042"
                  y="17.251"
                >
                  THEORY
                </text>
                <text
                  fill="#0167ff"
                  transform="rotate(90)"
                  x="-.489"
                  y="-27.315"
                >
                  FAM
                </text>
              </g>
            </svg>
          </div>
        </a>
        <svg
          className="chakra-icon emotion-6"
          focusable={false}
          onClick={[Function]}
          viewBox="0 0 24 24"
        >
          <path
            d="M 3 5 A 1.0001 1.0001 0 1 0 3 7 L 21 7 A 1.0001 1.0001 0 1 0 21 5 L 3 5 z M 3 11 A 1.0001 1.0001 0 1 0 3 13 L 21 13 A 1.0001 1.0001 0 1 0 21 11 L 3 11 z M 3 17 A 1.0001 1.0001 0 1 0 3 19 L 21 19 A 1.0001 1.0001 0 1 0 21 17 L 3 17 z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
    <div
      className="emotion-7"
    >
      <div
        className="emotion-8"
      >
        <div
          className="chakra-stack emotion-9"
        >
          <a
            className="chakra-link emotion-10"
            href="/"
            rel="noopener noreferrer"
          >
            <div
              className="emotion-11"
            >
              <svg
                className="chakra-icon emotion-5"
                focusable={false}
                viewBox="0 0 33.787568 17.315006"
              >
                <g>
                  <text
                    x=".021"
                    y="10.118"
                  >
                    YES
                  </text>
                  <text
                    x=".042"
                    y="17.251"
                  >
                    THEORY
                  </text>
                  <text
                    fill="#0167ff"
                    transform="rotate(90)"
                    x="-.489"
                    y="-27.315"
                  >
                    FAM
                  </text>
                </g>
              </svg>
            </div>
          </a>
          <button
            className="chakra-button emotion-13"
            onClick={[Function]}
            role="group"
            type="button"
          >
            <svg
              className="chakra-icon emotion-14"
              focusable={false}
              viewBox="0 0 245 240"
            >
              <path
                d="M104.4 103.9c-5.7 0-10.2 5-10.2 11.1s4.6 11.1 10.2 11.1c5.7 0 10.2-5 10.2-11.1.1-6.1-4.5-11.1-10.2-11.1zM140.9 103.9c-5.7 0-10.2 5-10.2 11.1s4.6 11.1 10.2 11.1c5.7 0 10.2-5 10.2-11.1s-4.5-11.1-10.2-11.1z"
              />
              <path
                d="M189.5 20h-134C44.2 20 35 29.2 35 40.6v135.2c0 11.4 9.2 20.6 20.5 20.6h113.4l-5.3-18.5 12.8 11.9 12.1 11.2 21.5 19V40.6c0-11.4-9.2-20.6-20.5-20.6zm-38.6 130.6s-3.6-4.3-6.6-8.1c13.1-3.7 18.1-11.9 18.1-11.9-4.1 2.7-8 4.6-11.5 5.9-5 2.1-9.8 3.5-14.5 4.3-9.6 1.8-18.4 1.3-25.9-.1-5.7-1.1-10.6-2.7-14.7-4.3-2.3-.9-4.8-2-7.3-3.4-.3-.2-.6-.3-.9-.5-.2-.1-.3-.2-.4-.3-1.8-1-2.8-1.7-2.8-1.7s4.8 8 17.5 11.8c-3 3.8-6.7 8.3-6.7 8.3-22.1-.7-30.5-15.2-30.5-15.2 0-32.2 14.4-58.3 14.4-58.3 14.4-10.8 28.1-10.5 28.1-10.5l1 1.2c-18 5.2-26.3 13.1-26.3 13.1s2.2-1.2 5.9-2.9c10.7-4.7 19.2-6 22.7-6.3.6-.1 1.1-.2 1.7-.2 6.1-.8 13-1 20.2-.2 9.5 1.1 19.7 3.9 30.1 9.6 0 0-7.9-7.5-24.9-12.7l1.4-1.6s13.7-.3 28.1 10.5c0 0 14.4 26.1 14.4 58.3 0 0-8.5 14.5-30.6 15.2z"
              />
            </svg>
            Sign in with Discord
          </button>
        </div>
      </div>
    </div>
  </div>,
  .emotion-0 {
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: full;
  padding-top: 0px;
}

.emotion-3 {
  text-align: center;
  font-size: xl;
  color: brand.800;
  margin-bottom: 4px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  bottom: 0px;
  color: brand.800;
  cursor: pointer;
  margin-bottom: 3px;
}

.emotion-4>*:not(style)~*:not(style) {
  margin-top: 0.5rem;
  -webkit-margin-end: 0px;
  margin-inline-end: 0px;
  margin-bottom: 0px;
  -webkit-margin-start: 0px;
  margin-inline-start: 0px;
}

.emotion-5 {
  text-transform: uppercase;
  font-size: xs;
}

.emotion-6 {
  width: 6px;
  height: 6px;
  display: inline-block;
  line-height: 1em;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: currentColor;
  vertical-align: middle;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-2"
      />
      <p
        className="chakra-text emotion-3"
      >
        This is some example content of the scroll to action container
      </p>
      <div
        className="chakra-stack emotion-4"
        onClick={[Function]}
      >
        <p
          className="chakra-text emotion-5"
        >
          Click here
        </p>
        <svg
          className="chakra-icon emotion-6"
          focusable={false}
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>,
  .emotion-0 {
  background: brand.800;
  height: 100vh;
}

<div
    className="emotion-0"
  />,
]
`;
